--- a/usr/share/nginx/html/index.html
+++ b/usr/share/nginx/html/index.html
@@ -10,6 +10,7 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 </head>
 <body>
 <h1>Welcome to the home of Crushed Lemon.</h1>
+<h2>Now better with automated deployments.</h2>
 
 </body>
 </html>
