Add static files for /apps

--- a/usr/share/nginx/html/index.html
+++ b/usr/share/nginx/html/index.html
@@ -12,5 +12,11 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 <h1>Welcome to the home of Crushed Lemon.</h1>
 <h2>Now better with automated deployments.</h2>
 
+<h3> Menu </h3>
+<ul>
+    <li>
+        <a href = "/apps">Apps</a>
+    </li>
+</ul>
 </body>
 </html>
